# npm-outdated-rs

./: Cargo.toml  README.md  hello.json  package.json
src/: checker.rs  dependency.rs  file.rs  main.rs  select_menu.rs  table.rs  utils.rs  ver_check.rs
