[package]
name = "lix"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["json", "gzip"] }
tokio = { version = "1.29.0", features = ["full"] }
serde_json = "1.0.99"
version-compare = "0.1.1"
futures = "0.3.28"
dialoguer = "^0.10.4"
tabled = { version = "*", features = ["color"] }
owo-colors = "3.5.0"
indicatif = "0.17.5"

