[package]
name = "lix"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0.190", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json", "gzip"] }
tokio = { version = "1.33.0", features = ["full"] }
serde_json = "1.0.108"
version-compare = "0.1.1"
futures = "0.3.29"
dialoguer = "^0.11.0"
tabled = { version = "0.14.0", features = ["color"] }
owo-colors = "3.5.0"
indicatif = "0.17.7"
regex = "1.10.2"
num_cpus = "1.16.0"
