[package]
name = "lix"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json", "gzip"] }
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0.117"
version-compare = "0.2.0"
futures = "0.3.30"
dialoguer = "^0.11.0"
owo-colors = "4.0.0"
indicatif = "0.17.8"
regex = "1.10.4"
num_cpus = "1.16.0"
tabled = "0.15.0"
